--- a/lab4/src/makefile
+++ b/lab4/src/makefile
@@ -1,7 +1,7 @@
 CC=gcc
 CFLAGS=-I.
 
-all: parallel_min_max utils.o find_min_max.o process_memory
+all: parallel_min_max utils.o find_min_max.o process_memory parallel_sum
 
 parallel_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
@@ -13,7 +13,10 @@ find_min_max.o : utils.h find_min_max.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
 process_memory : process_memory.c
-	$(CC) process_memory.c -o process_memory.o
+	$(CC) -o process_memory process_memory.c
+
+parallel_sum : parallel_sum.c
+	$(CC) -o parallel_sum utils.o sum.c sum.h utils.h parallel_sum.c -lpthread
 
 clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max task5 process_memory
+	rm utils.o find_min_max.o parallel_min_max process_memory parallel_sum
